# eaRS

./: .gitignore  .goreleaser.yaml  .releaserc.json  AGENTS.md  BENCH_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PARAKEET.md  README.md  REFACTOR.md  WEBSOCKET.md  cog.toml  dist-workspace.toml  error.txt  justfile  lst-master-key  rebuild-sentencepiece-v2.sh  rebuild-sentencepiece.sh  reference.xml  release.toml  repomix-output.xml  session.md  test  test_deserialize.rs  websocket_example.html
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml  goreleaser.yml  release-cargo-dist-backup.yml  semantic-release.yml
.pi/todos/: f30328fd-7915-4b51-becb-43a314417f1e.json
.trx/: ISSUES.md
.trx/crdt/: trx-0kvd.automerge  trx-5522.automerge  trx-c4p4.automerge  trx-c80x.automerge  trx-j002.automerge  trx-jy7j.automerge  trx-t2b6.automerge  trx-xv0t.automerge
apps/livesubs/: README.md  package.json  tsconfig.app.tsbuildinfo
apps/livesubs/src/: App.tsx  main.tsx
apps/livesubs/src-tauri/: Cargo.toml  tauri.conf.json
apps/livesubs/src-tauri/capabilities/: default.json
apps/livesubs/src-tauri/src/: lib.rs
apps/simple_gui/: README.md  package.json  tsconfig.app.tsbuildinfo  vite.config.ts  wayland.sh
apps/simple_gui/src/: App.tsx
apps/simple_gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/simple_gui/src-tauri/icons/: icon.icns
apps/simple_gui/src-tauri/src/: lib.rs
apps/simple_gui/src/components/: transcription-waveform.tsx
apps/subs/: README.md  package.json  tsconfig.app.tsbuildinfo  wayland.sh
apps/subs/logo/: ears_subs_logo.ai
apps/subs/src/: App.tsx
apps/subs/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/subs/src-tauri/icons/: icon.icns
apps/subs/src-tauri/src/: lib.rs
apps/subs/src/components/: theme-provider.tsx
apps/subs/src/components/ui/: checkbox.tsx
config/: config.toml
docs/: LISTENER_MODE.md  OMARCHY_CUDA.md  PARAKEET.md  WAYLAND_IMPLEMENTATION_EXAMPLE.md  WAYLAND_VIRTUAL_KEYBOARD.md  WEBSOCKET.md
examples/: basic_usage.rs  config.toml  live_transcription.rs  websocket_example.html
frontend/: README.md  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: transcription-waveform.tsx
frontend/src/components/ui/: live-waveform.tsx
plans/: PARALLEL_PROCESSING.md  WHISPER.md
prkt/: .gitignore  Cargo.toml  README.md  build.rs
prkt/src/: lib.rs
ref_audio/: README.md  ger.txt  ita.txt  jap.txt  por.txt
scripts/: build-all.sh  copy_config_schema.sh  fix-sentencepiece.sh  install-ears.ps1  install-ears.sh  install-omarchy.sh  setup-dictation-linux.sh
src/: config.rs  display.rs  lib.rs  lib_fix.patch  main.rs  server.rs  virtual_keyboard.rs  whisper.rs  whisper_fix.patch
src/server/: engine.rs  listener.rs  parakeet.rs  parallel.rs
