[package]
name = "eaRS"
version = "0.3.3"
edition = "2024"
description = "Easy automatic speech recognition library using Kyutai's STT models"
license = "MIT"
repository = "https://github.com/tommyfalkowski/eaRS"
authors = ["Tommy Falkowski"]
homepage = "https://byteowlz.com"

[lib]
name = "ears"
path = "src/lib.rs"

[[bin]]
name = "ears"
path = "src/main.rs"

[[bin]]
name = "ears-server"
path = "src/bin/ears-server.rs"

[[bin]]
name = "ears-dictation"
path = "src/bin/ears-dictation.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
candle = { version = "0.9.1", package = "candle-core" }
candle-nn = "0.9.1"
whisper-rs = { version = "0.11", optional = true }
clap = { version = "4.4.12", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
hf-hub = "0.4.3"
kaudio = "0.2.1"
moshi = "0.6.1"
sentencepiece = "0.11.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
indicatif = "0.17"
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"
libc = "0.2"
enigo = "0.2"
rdev = "0.5"
futures-util = "0.3"
ctrlc = "3.4"


[features]
default = []
whisper = ["dep:whisper-rs"]
cuda = ["candle/cuda", "candle-nn/cuda", "whisper-rs/cuda"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
metal = ["candle/metal", "candle-nn/metal", "whisper-rs/metal"]

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
