[package]
name = "eaRS"
version = "0.3.3"
edition = "2024"
description = "Easy automatic speech recognition library using Kyutai's STT models"
license = "MIT"
repository = "https://github.com/tommyfalkowski/eaRS"
authors = ["Tommy Falkowski"]
homepage = "https://byteowlz.com"

[lib]
name = "ears"
path = "src/lib.rs"

[[bin]]
name = "ears"
path = "src/main.rs"

[[bin]]
name = "ears-server"
path = "src/bin/ears-server.rs"

[[bin]]
name = "ears-dictation"
path = "src/bin/ears-dictation.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
candle = { version = "0.9", package = "candle-core" }
candle-nn = "0.9"
whisper-rs = { version = "0.11", optional = true }
clap = { version = "4.4.12", features = ["derive"] }
cpal = "0.16"
crossbeam-channel = "0.5"
hf-hub = "0.4.3"
kaudio = "0.2.1"
moshi = "0.6.4"
# prkt must come before sentencepiece to ensure ort's protobuf symbols are used
# (both bundle protobuf-lite, and the linker uses the first definition)
prkt = { path = "prkt", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.9"
dirs = "6.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"
indicatif = "0.17.5"
uuid = { version = "1.0", features = ["v4"] }
colored = "3.0"
libc = "0.2"
enigo = "0.6"
rdev = "0.5"
futures-util = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
# cudarc auto-detects CUDA version from the build system (nvcc)
# Users can override by setting CUDARC_CUDA_VERSION environment variable
cudarc = { version = "0.17", optional = true, features = ["cuda-version-from-build-system"] }
notifica = "3.0.2"
webrtc-vad = { version = "0.4", optional = true }

# Platform-specific sentencepiece configuration
# All platforms: compile from source (static linking).
[target.'cfg(target_os = "linux")'.dependencies]
sentencepiece = { version = "0.12", features = ["static"] }
uinput = "0.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
sentencepiece = { version = "0.12", features = ["static"] }

[features]
default = []
whisper = ["dep:whisper-rs"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
hooks = []

# Engines
parakeet = ["dep:prkt", "dep:webrtc-vad"]

# Acceleration (shared flags)
nvidia = ["dep:cudarc", "candle/cuda", "candle-nn/cuda", "prkt/cuda"]
apple = ["candle/metal", "candle-nn/metal", "prkt/coreml"]
amd = ["prkt/rocm"]
directml = ["prkt/directml"]

# Backwards-compat aliases
cuda = ["nvidia"]
cuda-whisper = ["nvidia", "whisper", "whisper-rs/cuda"]
metal = ["apple"]
metal-whisper = ["apple", "whisper", "whisper-rs/metal"]
parakeet-cuda = ["parakeet", "nvidia"]
parakeet-coreml = ["parakeet", "apple"]
parakeet-directml = ["parakeet", "directml"]
parakeet-rocm = ["parakeet", "amd"]

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
sentencepiece-sys = { path = "vendor/sentencepiece-sys" }
